--- a/css/JOO.css
+++ b/css/JOO.css
@@ -28,6 +28,9 @@ padding: 0;
 a {
 text-decoration: none;
 }
+a:hover {
+  background-color: yellow;
+}
 /* Start main title*/
 .main-title {
 text-transform: uppercase;
